[gd_scene format=3 uid="uid://didqxikkwsf5d"]

[ext_resource type="Texture2D" uid="uid://dfrjyxe4aaxjj" path="res://assets/zodiac_posters/poster_template.png" id="1_imi1m"]
[ext_resource type="Script" uid="uid://ckb584ue7ql5k" path="res://poster.gd" id="1_mp3sy"]
[ext_resource type="FontFile" uid="uid://bbri3yrdroqxi" path="res://fonts/mago3.ttf" id="2_ubgtn"]
[ext_resource type="FontFile" uid="uid://bise1fe3y7fmj" path="res://fonts/mago2.ttf" id="3_g538a"]
[ext_resource type="FontFile" uid="uid://68kjdfs5ppcy" path="res://fonts/mago1.ttf" id="4_65yai"]
[ext_resource type="Texture2D" uid="uid://vh001sujl0i3" path="res://assets/zodiac_posters/snake_logo.png" id="6_qe3sy"]
[ext_resource type="Texture2D" uid="uid://d28p46mavbw6t" path="res://assets/npc/dragon_head.png" id="7_xexrc"]

[sub_resource type="Theme" id="Theme_g538a"]
default_font = ExtResource("2_ubgtn")
default_font_size = 20

[sub_resource type="Theme" id="Theme_65yai"]
default_font = ExtResource("3_g538a")

[sub_resource type="Theme" id="Theme_mp3sy"]
default_font = ExtResource("4_65yai")
default_font_size = 10

[node name="Poster" type="Node2D" unique_id=1129719193]
script = ExtResource("1_mp3sy")

[node name="TextureButton" type="TextureButton" parent="." unique_id=692382546]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("1_imi1m")

[node name="ZodiacName" type="RichTextLabel" parent="." unique_id=209876996]
offset_left = 80.0
offset_top = 132.0
offset_right = 156.0
offset_bottom = 149.0
theme = SubResource("Theme_g538a")
theme_override_colors/default_color = Color(0.72335637, 0.20444179, 0.045550704, 1)
text = "Animal"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="PersonalityLabel" type="RichTextLabel" parent="." unique_id=416672339]
offset_left = 93.0
offset_top = 179.0
offset_right = 144.0
offset_bottom = 197.0
theme = SubResource("Theme_65yai")
theme_override_colors/default_color = Color(0.86, 0.29870665, 0.094600014, 1)
text = "Personality"
fit_content = true

[node name="YearsLabel" type="RichTextLabel" parent="." unique_id=1824680530]
offset_left = 92.0
offset_top = 152.0
offset_right = 143.0
offset_bottom = 170.0
theme = SubResource("Theme_65yai")
theme_override_colors/default_color = Color(0.86, 0.29870665, 0.094600014, 1)
text = "Years"
horizontal_alignment = 1

[node name="FriendsLabel" type="RichTextLabel" parent="." unique_id=738660685]
offset_left = 46.0
offset_top = 217.0
offset_right = 77.0
offset_bottom = 235.0
theme = SubResource("Theme_65yai")
theme_override_colors/default_color = Color(0.86, 0.29870665, 0.094600014, 1)
text = "friends"
fit_content = true

[node name="EnemiesLabel" type="RichTextLabel" parent="." unique_id=1604681003]
offset_left = 160.0
offset_top = 217.0
offset_right = 191.0
offset_bottom = 235.0
theme = SubResource("Theme_65yai")
theme_override_colors/default_color = Color(0.86, 0.29870665, 0.094600014, 1)
text = "enemies"
fit_content = true

[node name="Years" type="RichTextLabel" parent="." unique_id=225686144]
offset_left = 66.0
offset_top = 166.0
offset_right = 174.0
offset_bottom = 179.0
theme = SubResource("Theme_mp3sy")
theme_override_colors/default_color = Color(0.12955844, 0.12955847, 0.12955844, 1)
text = "2006, 2010, 2014, 2018, 2022, 2026"
autowrap_trim_flags = 0

[node name="Personality" type="RichTextLabel" parent="." unique_id=1816171574]
offset_left = 33.0
offset_top = 192.0
offset_right = 206.0
offset_bottom = 212.0
theme = SubResource("Theme_mp3sy")
theme_override_colors/default_color = Color(0.12955844, 0.12955847, 0.12955844, 1)
text = "Snakes are calm, wise, observant, mysterious, and think deeply"
fit_content = true
horizontal_alignment = 1

[node name="Friends" type="RichTextLabel" parent="." unique_id=100247577]
offset_left = 24.0
offset_top = 230.0
offset_right = 100.0
offset_bottom = 266.0
theme = SubResource("Theme_mp3sy")
theme_override_colors/default_color = Color(0.12955844, 0.12955847, 0.12955844, 1)
text = "Dragon, Rooster"
fit_content = true
horizontal_alignment = 1

[node name="Enemies" type="RichTextLabel" parent="." unique_id=1021404134]
offset_left = 138.0
offset_top = 230.0
offset_right = 215.0
offset_bottom = 266.0
theme = SubResource("Theme_mp3sy")
theme_override_colors/default_color = Color(0.12955844, 0.12955847, 0.12955844, 1)
text = "Rat, Tiger, Goat"
fit_content = true
horizontal_alignment = 1

[node name="ZodiacLogo" type="TextureRect" parent="." unique_id=1831292970]
offset_left = 49.0
offset_top = 43.0
offset_right = 193.0
offset_bottom = 139.0
texture = ExtResource("6_qe3sy")

[node name="ZodiacCloseUp" type="TextureRect" parent="." unique_id=1804489122]
offset_left = 320.0
offset_top = 23.0
offset_right = 620.0
offset_bottom = 323.0
texture = ExtResource("7_xexrc")
